RESOLVED FIXED293753
AX: Crash when navigating character-by-character via VoiceOver in text with multi-byte glyphs (e.g. emojis)
https://bugs.webkit.org/show_bug.cgi?id=293753
Summary AX: Crash when navigating character-by-character via VoiceOver in text with m...
Tyler Wilcock
Reported 2025-05-29 12:01:27 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-29 12:01:38 PDT
Tyler Wilcock
Comment 2 2025-05-29 12:12:20 PDT
Tyler Wilcock
Comment 3 2025-05-30 10:23:14 PDT
EWS
Comment 4 2025-06-02 12:02:17 PDT
Committed 295703@main (9a59ea98b0a6): <https://commits.webkit.org/295703@main> Reviewed commits have been landed. Closing PR #46124 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.