AX: Crash when navigating character-by-character via VoiceOver in text with multi-byte glyphs (e.g. emojis) https://bugs.webkit.org/show_bug.cgi?id=293753 rdar://152255108

Reviewed by NOBODY (OOPS!).

DRAFT: Running this through EWS to see if it breaks non-accessibility things before writing a layout test and
real commit message.

* Source/WebCore/platform/graphics/ComplexTextController.cpp:
(WebCore::ComplexTextController::enclosingGlyphBoundsForTextRun):